# lsd2

./: CMakeLists.txt  NEWS  README.html  README.md
examples/rooted_tree/: h1n1_cleaned_original_phyml_tree_ingroup.txt.ingroup  h1n1_flexible.date  h1n1_partition  h1n1_phyml.tree.result  h1n1_phyml.tree.result.date.nexus  h1n1_phyml.tree.result.nexus
examples/unrooted_tree_with_outgroups/: h1n1_cleaned.date  h1n1_cleaned_original_phyml_tree.txt  h1n1_outgroup.txt
examples/unrooted_tree_without_outgroups/: Dengue.date  Dengue.phy_phyml_tree.txt
src/: aln.fa.timetree  aln.fa.timetree.date.nexus  aln.fa.timetree.nexus  aln.fa.timetree.nwk  confidence_interval.cpp  confidence_interval.h  date.h  dating.cpp  dating.h  estimate_root.cpp  estimate_root.h  lsd.cpp  lsd.h  lsd2  makefile  node.h  options.cpp  options.h  outliers.cpp  outliers.h  pair.h  part.h  pr.h  readData.cpp  readData.h  subtree.h  utils.cpp  utils.h
src/.deps/: confidence_interval.Po  dating.Po  estimate_root.Po  lsd.Po  options.Po  readData.Po  utils.Po
src/lsd2.dSYM/Contents/: Info.plist
src/lsd2.dSYM/Contents/Resources/DWARF/: lsd2
