add_library(lsd2
src/confidence_interval.cpp
src/confidence_interval.h
src/date.h
src/dating.cpp
src/dating.h
src/estimate_root.cpp
src/estimate_root.h
src/lsd.cpp
src/lsd.h
src/node.h
src/options.cpp
src/options.h
src/outliers.cpp
src/outliers.h
src/pair.h
src/part.h
src/pr.h
src/readData.cpp
src/readData.h
src/subtree.h
src/utils.cpp
src/utils.h
)
